@@ -12,8 +12,8 @@ import edu.colorado.phet.common.phetcommon.view.util.PhetFont;
 import edu.colorado.phet.common.piccolophet.PhetPNode;
 import edu.colorado.phet.common.piccolophet.nodes.HTMLNode;
 import edu.colorado.phet.common.piccolophet.nodes.simsharing.SimSharingComboBoxNode;
-import edu.colorado.phet.dilutions.DilutionsResources.Strings;
-import edu.colorado.phet.dilutions.DilutionsSimSharing.UserComponents;
+import edu.colorado.phet.dilutions.MolarityResources.Strings;
+import edu.colorado.phet.dilutions.MolaritySimSharing.UserComponents;
 import edu.colorado.phet.dilutions.common.model.Solute;
 import edu.umd.cs.piccolo.PNode;
 import edu.umd.cs.piccolo.nodes.PPath;
